Fixed total cost alignment

--- a/style.css
+++ b/style.css
@@ -59,7 +59,8 @@ th {
 }
 
 /* need to actually make it align with table, not just bottom of page */
-#total-cost {
-    position: absolute;
-    right: 10rem;
+#cost-container {
+    display: flex;
+    width: 860px;
+    justify-content: flex-end;
 }
